deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: workflow-service
  lagels:
    app: workflow-service
  annotations:
    nginx.ingress.kubernetes.io/app-root: /process
spec:
  backend:
    serviceName: workflow-service
    servicePort: 8080
